fixed css spacing issue; fixed axios bug for sandbox

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background-color: rgba(0, 0, 0, 0.911);
-	color: #ffffff;
+	color: white;
 }
 
 .container {
@@ -25,15 +25,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 50px;
 }
-
-/* .gifContainer {
-  display: flex;
-  flex-shrink: 0;
-  justify-content: center;
-  align-items: center;
-} */
 
 #gifContainer {
 	display: flex;
